--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -101,95 +101,115 @@ queueManagers:
              #The name of the queue or queue name pattern as per queue filter, comma separated values
              values: ["SYSTEM","$SYS"]
 
-mqMertics:
+mqMetrics:
   # This Object will extract queue manager metrics
   - metricsType: "queueMgrMetrics"
     metrics:
       include:
-        - Status: "Status"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_Q_MGR_STATUS"
+        - Status:
+            alias: "Status"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_Q_MGR_STATUS"
       
   # This Object will extract queue metrics
   - metricsType: "queueMetrics"
     metrics:
       include:
-        - MaxQueueDepth: "Max Queue Depth"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MAX_Q_DEPTH"
-          ibmCommand: "MQCMD_INQUIRE_Q"
+        - MaxQueueDepth:
+            alias: "Max Queue Depth"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MAX_Q_DEPTH"
+            ibmCommand: "MQCMD_INQUIRE_Q"
           
-        - CurrentQueueDepth: "Current Queue Depth"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_CURRENT_Q_DEPTH"
-          ibmCommand: "MQCMD_INQUIRE_Q"
+        - CurrentQueueDepth:
+            alias: "Current Queue Depth"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_CURRENT_Q_DEPTH"
+            ibmCommand: "MQCMD_INQUIRE_Q"
           
-        - OpenInputCount: "Open Input Count"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_OPEN_INPUT_COUNT"
-          ibmCommand: "MQCMD_INQUIRE_Q"
+        - OpenInputCount:
+            alias: "Open Input Count"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_OPEN_INPUT_COUNT"
+            ibmCommand: "MQCMD_INQUIRE_Q"
           
-        - OpenOutputCount: "Open Output Count"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_OPEN_OUTPUT_COUNT"
-          ibmCommand: "MQCMD_INQUIRE_Q"
+        - OpenOutputCount:
+            alias: "Open Output Count"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_OPEN_OUTPUT_COUNT"
+            ibmCommand: "MQCMD_INQUIRE_Q"
 
-        - OldestMsgAge: "OldestMsgAge"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_OLDEST_MSG_AGE"
-          ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
+        - OldestMsgAge:
+            alias: "OldestMsgAge"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_OLDEST_MSG_AGE"
+            ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
 
-        - OnQTime: "OnQTime"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_Q_TIME_INDICATOR"
-          ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
+        - OnQTime:
+            alias: "OnQTime"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_Q_TIME_INDICATOR"
+            ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
 
-        - UncommittedMsgs: "UncommittedMsgs"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_UNCOMMITTED_MSGS"
-          ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
+        - UncommittedMsgs:
+            alias: "UncommittedMsgs"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_UNCOMMITTED_MSGS"
+            ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
 
-        - HighQDepth: "HighQDepth"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_HIGH_Q_DEPTH"
-          ibmCommand: "MQCMD_RESET_Q_STATS"
+        - HighQDepth:
+            alias: "HighQDepth"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_HIGH_Q_DEPTH"
+            ibmCommand: "MQCMD_RESET_Q_STATS"
 
-        - MsgDeqCount: "MsgDeqCount"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MSG_DEQ_COUNT"
-          ibmCommand: "MQCMD_RESET_Q_STATS"
+        - MsgDeqCount:
+            alias: "MsgDeqCount"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MSG_DEQ_COUNT"
+            ibmCommand: "MQCMD_RESET_Q_STATS"
 
-        - MsgEnqCount: "MsgEnqCount"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MSG_ENQ_COUNT"
-          ibmCommand: "MQCMD_RESET_Q_STATS"
+        - MsgEnqCount:
+            alias: "MsgEnqCount"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MSG_ENQ_COUNT"
+            ibmCommand: "MQCMD_RESET_Q_STATS"
 
       
   # This Object will extract channel metrics
   - metricsType: "channelMetrics"
     metrics:
       include:
-        - Messages: "Messages"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_MSGS"
+        - Messages:
+            alias: "Messages"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_MSGS"
           
-        - Status: "Status"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_CHANNEL_STATUS"  #http://www.ibm.com/support/knowledgecenter/SSFKSJ_7.5.0/com.ibm.mq.ref.dev.doc/q090880_.htm
+        - Status:
+            alias: "Status"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_CHANNEL_STATUS"  #http://www.ibm.com/support/knowledgecenter/SSFKSJ_7.5.0/com.ibm.mq.ref.dev.doc/q090880_.htm
           
-        - ByteSent: "Byte Sent"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BYTES_SENT"
+        - ByteSent:
+            alias: "Byte Sent"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BYTES_SENT"
           
-        - ByteReceived: "Byte Received"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BYTES_RECEIVED"
+        - ByteReceived:
+            alias: "Byte Received"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BYTES_RECEIVED"
           
-        - BuffersSent: "Buffers Sent"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BUFFERS_SENT"
+        - BuffersSent:
+            alias: "Buffers Sent"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BUFFERS_SENT"
           
-        - BuffersReceived: "Buffers Received"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BUFFERS_RECEIVED"
+        - BuffersReceived:
+            alias: "Buffers Received"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BUFFERS_RECEIVED"
 
 
   - metricsType: "listenerMetrics"
     metrics:
       include:
-        - Status : "Status"
-          ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_LISTENER_STATUS"
+        - Status:
+            alias: "Status"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_LISTENER_STATUS"
 
   # This Object will extract topic metrics
   - metricsType: "topicMetrics"
     metrics:
       include:
-        - PublishCount: "Publish Count"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_PUB_COUNT"
-          ibmCommand: "MQCMD_INQUIRE_TOPIC_STATUS"
-        - SubscriptionCount: "Subscription Count"
-          ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_SUB_COUNT"
-          ibmCommand: "MQCMD_INQUIRE_TOPIC_STATUS"
+        - PublishCount:
+            alias: "Publish Count"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_PUB_COUNT"
+            ibmCommand: "MQCMD_INQUIRE_TOPIC_STATUS"
+        - SubscriptionCount:
+            alias: "Subscription Count"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_SUB_COUNT"
+            ibmCommand: "MQCMD_INQUIRE_TOPIC_STATUS"
