--- a/src/test/resources/conf/configBindingNoQm.yaml
+++ b/src/test/resources/conf/configBindingNoQm.yaml
@@ -48,7 +48,7 @@ queueManagers:
             #The name of the queue or queue name pattern as per queue filter, comma separated values
               values: ["SYSTEM"]
 
-mqMertics:
+mqMetrics:
   # This Object will extract queue manager metrics
   - metricsType: "queueMgrMetrics"
     metrics:
