* Active Channel Count fix * CountDownLatch count fix for collectors * README update for jar dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.appdynamics.extensions</groupId>
     <artifactId>websphere-mq-monitoring-extension</artifactId>
-    <version>7.0.0</version>
+    <version>7.0.1</version>
     <packaging>jar</packaging>
     <name>websphere-mq-monitoring-extension</name>
     <url>http://maven.apache.org</url>
@@ -30,7 +30,7 @@
             <version>3.7.11</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.ibm</groupId>
             <artifactId>com.ibm.mq</artifactId>
             <scope>system</scope>
@@ -64,7 +64,7 @@
             <scope>system</scope>
             <version>${ibm.mq.lib.version}</version>
             <systemPath>${lib.dir}/com.ibm.mq.commonservices.jar</systemPath>
-        </dependency>
+        </dependency>-->
         <!--<dependency>
             <groupId>com.ibm</groupId>
             <artifactId>connector</artifactId>
