encryption support for truststore and keystore passwords

--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -32,7 +32,7 @@ queueManagers:
     #This field is not required in case of transportType: Bindings
     #channelName: "SYSTEM.ADMIN.SVRCONN"
 
-    #user with admin level access.
+    #for user access level, please check "Access Permissions" section on the extensions page
     #comment out the username and password in case of transportType: Bindings.
     #username: ""
     #password: ""
@@ -239,3 +239,13 @@ mqMetrics:
 #taskSchedule:
 #  numberOfThreads: 1
 #  taskDelaySeconds: 300
+
+
+sslConnection:
+  trustStorePath: ""
+  trustStorePassword: ""
+  trustStoreEncryptedPassword: ""
+
+  keyStorePath: ""
+  keyStorePassword: ""
+  keyStoreEncryptedPassword: ""
