Updated to commons 2.2.4 and minor bug fix

--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -6,6 +6,8 @@ numberOfThreads: 20
 #This will create it in specific Tier aka Component. Replace <COMPONENT_ID>. Please make sure to have a trailing |.
 #To find out the COMPONENT_ID, please see the screen shot here https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
 metricPrefix: "Server|Component:<COMPONENT_ID>|Custom Metrics|WebsphereMQ|"
+#For SIM
+#metricPrefix: "Custom Metrics|WebsphereMQ|"
 
 #This is the timeout on queue metrics and channel metrics threads.Default value is 20 seconds.
 #No need to change the default unless you know what you are doing.
