--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
         <lib.dir>${basedir}/lib</lib.dir>
-        <ibm.mq.lib.version>7.5.0.8</ibm.mq.lib.version>
+        <ibm.mq.lib.version>9.3.0.15</ibm.mq.lib.version>
         <target.dir>${project.build.directory}/WMQMonitor</target.dir>
     </properties>
     <dependencies>
@@ -29,6 +29,12 @@
             <artifactId>machineagent-repackaged</artifactId>
             <version>4.0.5.1</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
         </dependency>
         <!--<dependency>
             <groupId>com.ibm</groupId>
