--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
-        <lib.dir>${basedir}/lib</lib.dir>
-        <ibm.mq.lib.version>9.4.0.0</ibm.mq.lib.version>
+        <ibm.mq.lib.version>9.4.3.0</ibm.mq.lib.version>
         <target.dir>${project.build.directory}/WMQMonitor</target.dir>
     </properties>
     <dependencies>
@@ -30,54 +29,10 @@
             <version>4.0.5.1</version>
             <scope>provided</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>com.ibm</groupId>
-            <artifactId>com.ibm.mq</artifactId>
-            <scope>system</scope>
-            <version>${ibm.mq.lib.version}</version>
-            <systemPath>${lib.dir}/com.ibm.mq.jar</systemPath>
-        </dependency>
         <dependency>
-            <groupId>com.ibm</groupId>
-            <artifactId>com.ibm.mq.jmqi</artifactId>
-            <scope>system</scope>
-            <version>${ibm.mq.lib.version}</version>
-            <systemPath>${lib.dir}/com.ibm.mq.jmqi.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.ibm</groupId>
-            <artifactId>com.ibm.mq.pcf</artifactId>
-            <scope>system</scope>
-            <version>${ibm.mq.lib.version}</version>
-            <systemPath>${lib.dir}/com.ibm.mq.pcf.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.ibm</groupId>
-            <artifactId>com.ibm.mq.headers</artifactId>
-            <scope>system</scope>
-            <version>${ibm.mq.lib.version}</version>
-            <systemPath>${lib.dir}/com.ibm.mq.headers.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.ibm</groupId>
-            <artifactId>com.ibm.mq.commonservices</artifactId>
-            <scope>system</scope>
-            <version>${ibm.mq.lib.version}</version>
-            <systemPath>${lib.dir}/com.ibm.mq.commonservices.jar</systemPath>
-        </dependency>-->
-        <!--<dependency>
-            <groupId>com.ibm</groupId>
-            <artifactId>connector</artifactId>
-            <version>${ibm.mq.lib.version}</version>
-            <scope>system</scope>
-            <systemPath>${lib.dir}/connector.jar</systemPath>
-        </dependency>-->
-        <dependency>
-            <groupId>com.ibm</groupId>
+            <groupId>com.ibm.mq</groupId>
             <artifactId>com.ibm.mq.allclient</artifactId>
-            <scope>system</scope>
             <version>${ibm.mq.lib.version}</version>
-            <systemPath>${lib.dir}/com.ibm.mq.allclient.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.appdynamics</groupId>
