--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -116,11 +116,11 @@ mqMetrics:
         ################### Added metrics
         - QueueManagerName:
             alias: "Queue Manager Name"
-            ibmConstant: "com.ibm.mq.constants.MQCA_Q_MGR_NAME"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQCA_Q_MGR_NAME"
             ibmCommand: "MQCMD_INQUIRE_Q_MGR"
         - Platform:
             alias: "Platform"
-            ibmConstant: "com.ibm.mq.constants.MQIA_PLATFORM"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_PLATFORM"
             ibmCommand: "MQCMD_INQUIRE_Q_MGR"
         ###################
         - Status:
@@ -140,45 +140,47 @@ mqMetrics:
         ################### Added metrics
         - QueueName:
             alias: "Queue Name"
-            ibmConstant: "com.ibm.mq.constants.MQCA_Q_NAME"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQCA_Q_NAME"
             ibmCommand: "MQCMD_INQUIRE_Q"
         - OldestMsgAge:
             alias: "Oldest Message Age"
-            ibmConstant: "com.ibm.mq.constants.MQIACF_OLDEST_MSG_AGE"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_OLDEST_MSG_AGE"
             ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
         - LastGetDate:
             alias: "Last Get Date"
-            ibmConstant: "com.ibm.mq.constants.MQCACF_LAST_GET_DATE"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACF_LAST_GET_DATE"
             ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
         - LastGetTime:
             alias: "Last Get Time"
-            ibmConstant: "com.ibm.mq.constants.MQCACF_LAST_GET_TIME"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACF_LAST_GET_TIME"
             ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
         - LastPutDate:
             alias: "Last Put Date"
-            ibmConstant: "com.ibm.mq.constants.MQCACF_LAST_PUT_DATE"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACF_LAST_PUT_DATE"
             ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
         - LastPutTime:
             alias: "Last Put Time"
-            ibmConstant: "com.ibm.mq.constants.MQCACF_LAST_PUT_TIME"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACF_LAST_PUT_TIME"
             ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
         - QueueMonitoring:
             alias: "Queue Monitoring"
-            ibmConstant: "com.ibm.mq.constants.MQIA_MONITORING_Q"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MONITORING_Q"
             ibmCommand: "MQCMD_INQUIRE_Q"
         - QueueDescription:
             alias: "Queue Description"
-            ibmConstant: "com.ibm.mq.constants.MQCA_Q_DESC"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQCA_Q_DESC"
             ibmCommand: "MQCMD_INQUIRE_Q"
         ################### This was commented
-        - OldestMsgAge:
-            alias: "OldestMsgAge"
-            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACF_OLDEST_MSG_AGE"
-            ibmCommand: "MQCMD_INQUIRE_Q_STATUS"
-            aggregationType: "OBSERVATION"
-            timeRollUpType: "CURRENT"
-            clusterRollUpType: "INDIVIDUAL"
+        # Duplicate of OldestMsgAge retained above with correct constant
         ###################
+        - GetStatus:
+            alias: "Get Status"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_INHIBIT_GET"
+            ibmCommand: "MQCMD_INQUIRE_Q"
+        - PutStatus:
+            alias: "Put Status"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_INHIBIT_PUT"
+            ibmCommand: "MQCMD_INQUIRE_Q"
         - MaxQueueDepth:
             alias: "Max Queue Depth"
             ibmConstant: "com.ibm.mq.constants.CMQC.MQIA_MAX_Q_DEPTH"
@@ -234,75 +236,99 @@ mqMetrics:
         ################### Added metrics
         - ChannelName:
             alias: "Channel Name"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_CHANNEL_NAME"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_CHANNEL_NAME"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL"
+        - ChannelInstType:
+            alias: "Channel Instance Type"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_CHANNEL_INSTANCE_TYPE"
+            ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - ChannelType:
             alias: "Channel Type"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_CHANNEL_TYPE"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_CHANNEL_TYPE"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL"
-        - CurrentSharingConversations:
-            alias: "Current Sharing Conversations"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_SHARING_CONVERSATIONS"
+        - CurrentActionState:
+            alias: "Current Action State"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_CHANNEL_INSTANCE_STATUS"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - CurrentSharingConversations:
             alias: "Current Sharing Conversations"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_SHARING_CONVERSATIONS"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_SHARING_CONVERSATIONS"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - HeartbeatInterval:
             alias: "Heartbeat Interval"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_HB_INTERVAL"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_HB_INTERVAL"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL"
         - KeepAliveInterval:
             alias: "Keep Alive Interval"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_KEEP_ALIVE_INTERVAL"
-            ibmCommand: "MQCMD_INQUIRE_CHANNEL"
-        - KeepAliveInterval:
-            alias: "Keep Alive Interval"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_KEEP_ALIVE_INTERVAL"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_KEEP_ALIVE_INTERVAL"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL"
         - LastMessageDate:
             alias: "Last Message Date"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_LAST_MSG_DATE"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_LAST_MSG_DATE"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - LastMessageTime:
             alias: "Last Message Time"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_LAST_MSG_TIME"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_LAST_MSG_TIME"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - LocalAddress:
             alias: "Local Address"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_LOCAL_ADDRESS"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_LOCAL_ADDRESS"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL"
         - MCAUserID:
             alias: "MCA User ID"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_MCA_USER_ID"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_MCA_USER_ID"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - MCAStatus:
             alias: "MCA Status"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_MCA_STATUS"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_MCA_STATUS"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - RemoteQmgrName:
             alias: "Remote Queue Manager Name"
-            ibmConstant: "com.ibm.mq.constants.MQCA_REMOTE_Q_MGR_NAME"
+            ibmConstant: "com.ibm.mq.constants.CMQC.MQCA_REMOTE_Q_MGR_NAME"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - XmitQName:
             alias: "Xmit Queue Name"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_XMIT_Q_NAME"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_XMIT_Q_NAME"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL"
         - ConnectionName:
             alias: "Connection Name"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_CONNECTION_NAME"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_CONNECTION_NAME"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL"
         - ShortRetriesLeft:
             alias: "Short Retries Left"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_SHORT_RETRIES_LEFT"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_SHORT_RETRIES_LEFT"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - LongRetriesLeft:
             alias: "Long Retries Left"
-            ibmConstant: "com.ibm.mq.constants.MQIACH_LONG_RETRIES_LEFT"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_LONG_RETRIES_LEFT"
+            ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
+        - ShortTermBatchSize:
+            alias: "Short Term Batch Size"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BATCH_INTERVAL"
+            ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
+        - LongTermBatchSize:
+            alias: "Long Term Batch Size"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BATCH_DATA_LIMIT"
+            ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
+        - ShortTermCompressionRate:
+            alias: "Short Term Compression Rate"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_RATE"
+            ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
+        - LongTermCompressionRate:
+            alias: "Long Term Compression Rate"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_RATE"
+            ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
+        - ShortTermCompressionTime:
+            alias: "Short Term Compression Time"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_TIME"
+            ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
+        - LongTermCompressionTime:
+            alias: "Long Term Compression Time"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_TIME"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         - SSLShortPeerName:
             alias: "SSL Short Peer Name"
-            ibmConstant: "com.ibm.mq.constants.MQCACH_SSL_SHORT_PEER_NAME"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQCACH_SSL_SHORT_PEER_NAME"
             ibmCommand: "MQCMD_INQUIRE_CHANNEL_STATUS"
         ###################
         - Messages:
@@ -332,6 +358,29 @@ mqMetrics:
             alias: "Buffers Received"
             ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BUFFERS_RECEIVED"
 
+
+  - metricsType: "channelStatsMetrics"
+    metrics:
+      include:
+        # Placeholders for statistics constants; ensure MQ statistics are enabled on the QM
+        - ShortTermBatchSize:
+            alias: "Short Term Batch Size"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BATCH_INTERVAL"
+        - LongTermBatchSize:
+            alias: "Long Term Batch Size"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_BATCH_DATA_LIMIT"
+        - ShortTermCompressionRate:
+            alias: "Short Term Compression Rate"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_RATE"
+        - LongTermCompressionRate:
+            alias: "Long Term Compression Rate"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_RATE"
+        - ShortTermCompressionTime:
+            alias: "Short Term Compression Time"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_TIME"
+        - LongTermCompressionTime:
+            alias: "Long Term Compression Time"
+            ibmConstant: "com.ibm.mq.constants.CMQCFC.MQIACH_COMPRESSION_TIME"
 
   - metricsType: "listenerMetrics"
     metrics:
